# MHCLib

./: .gitignore  CMakeLists.txt
algorithms/: .gitignore  CMakeLists.txt
common/: common.h
data_structures/: CMakeLists.txt
data_structures/funcs/: list_funcs.cpp
data_structures/impl/: list.hpp  queue.hpp  stack.hpp
data_structures/include/: ds_common.h  list.h  list.hpp  queue.h  stack.h  vector.hpp
demo/: CMakeLists.txt
demo/include/: demo.h
demo/src/: main.cpp
